<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2020 Google LLC

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SyncKotlin</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Activity is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="last_sync_timestamp">last_sync_timestamp</string>
    <string name="sync_enabled">sync_enabled</string>
    <string name="channel_name">FitSync</string>
    <string name="channel_description">Notifications from FitSync</string>
    <string name="error_android_permissions">Android permissions failure.</string>
    <string name="error_oauth_permissions">OAuth permissions failure.</string>
    <string name="enable_sync">Enable Sync</string>
    <string name="sync_to_fit_now">Sync to Fit now</string>
    <string name="syncstatus">syncStatus</string>
    <string name="last_sync_failed">last_sync_failed</string>
    <string name="last_sync_date">last_sync_date</string>
    <string name="fit_sign_in_error" tools:ignore="PluralsCandidate">There was an error signing into
        Fit. Request code: %1$d response code: %2$d.</string>
    <string name="last_successful_sync_label">Last successful sync:</string>
    <string name="last_sync_message">never</string>
</resources>
